feat: implement statistics model and post route
