# src/resources/statistics/statistic.service.js
@@ -2,9 +2,11 @@ const statisticRepo = require('./statistic.db.repository');
 
 const get = async userId => statisticRepo.get(userId);
 
+const save = async (userId, statistic) => statisticRepo.save(userId, statistic);
+
 const upsert = async (userId, statistic) =>
   statisticRepo.upsert(userId, { ...statistic, userId });
 
 const remove = async userId => statisticRepo.remove(userId);
 
-module.exports = { get, upsert, remove };
+module.exports = { get, upsert, remove, save };
